--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -1,13 +1,47 @@
-<div style="text-align:left">
-  <h2>
-    {{ title }}
-  </h2>
+
+<!-- <div>
+    <input 
+    type="text" 
+    clsss="form-control"
+    (keyup)="onKeys($event)">
+    
+</div> -->
+  
+<hr>
+  
+<div>
+    <input 
+    type="text" 
+    clsss="form-control"
+    [(ngModel)] = "courseName">    
 </div>
 
-<div style="text-align:left">
+<hr>
+<div>
+    <button class='btn btn-primary' 
+      [disabled]="!allowdToAdd"
+      (click)="onClicked()"
+      >
+      ADD +
+    </button>
+</div>
+  
+  <div>
+    {{ onAddCourseText }}
+  </div>
+  
+   <h2>
+    {{ title }}
+  </h2>
+
+
+<div  *ngIf="!courseName" style="text-align:left">
   <ul>
     <li *ngFor="let course of coursesList">
       {{ course }}
     </li>
   </ul>
 </div>
+
+<p *ngIf="courseName"> You just added :  {{ courseName }}</p>
+<p *ngIf="!courseName">You don't added any course</p>
